Bug 339827 - Creating Event from message, clicking Open editor... doesn't copy start and end time into new dialog
Summary: Creating Event from message, clicking Open editor... doesn't copy start and e...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.14.0
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-09 18:01 UTC by Sander van Grieken
Modified: 2014-10-10 08:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sander van Grieken 2014-10-09 18:01:24 UTC
When I rightclick a message and select Create Event.. , then adjust the start
and end times, then click Open editor... , the start and end times are not copied into the new Event dialog

Reproducible: Always
Comment 1 Laurent Montel 2014-10-10 07:48:35 UTC
Git commit 60b3deb60164cf3c80d2ea5003fef21ae2d97739 by Montel Laurent.
Committed on 10/10/2014 at 07:48.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 339827 - Creating Event from message, clicking Open editor... doesn't copy start and end time into new dialog

FIXED-IN: 4.14.3

M  +1    -0    messageviewer/CMakeLists.txt
M  +1    -0    messageviewer/tests/CMakeLists.txt
A  +86   -0    messageviewer/tests/eventdatetimewidgettest.cpp     [License: GPL (v2)]
A  +38   -0    messageviewer/tests/eventdatetimewidgettest.h     [License: GPL (v2)]
M  +28   -14   messageviewer/tests/eventedittest.cpp
A  +94   -0    messageviewer/widgets/eventdatetimewidget.cpp     [License: GPL (v2)]
A  +55   -0    messageviewer/widgets/eventdatetimewidget.h     [License: GPL (v2)]
M  +14   -4    messageviewer/widgets/eventedit.cpp
M  +4    -3    messageviewer/widgets/eventedit.h

http://commits.kde.org/kdepim/60b3deb60164cf3c80d2ea5003fef21ae2d97739
Comment 2 Laurent Montel 2014-10-10 07:51:55 UTC
kdelibs code was totally broken
=> I recreated a new one with unittest
and it works fine :)

Don't know if it will in 4.14.2 or 4.14.3 yesterday was tag.
Comment 3 Albert Astals Cid 2014-10-10 08:48:26 UTC
This ended up in 4.14.2 due to the retag too.