Fix Bug 339827 - Creating Event from message, clicking Open editor... doesn't copy start and end time into new dialog

FIXED-IN: 4.14.3
BUG: 339827